--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,15 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>3.7</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -34,13 +40,6 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-    <repositories>
-        <repository>
-            <id>central</id>
-            <name>codeartifact</name>
-            <url>https://my-domain-224520910125.d.codeartifact.us-east-1.amazonaws.com/maven/my-repo/</url>
-        </repository>
-    </repositories>
 
     <distributionManagement>
         <repository>
